<resources>
    <string name="app_name">component_acfunmine</string>
    <string name="package_name">tv.danmaku.bili</string>
    <string name="person_info_title">账号资料</string>
    <string name="pref_background_music_notification_style_key">pref_background_music_notification_style_key</string>
    <string name="pref_bangumi_follow_home_review_first">pref_bangumi_follow_home_review_first</string>
    <string name="pref_bangumi_review_index_closed_media">pref_bangumi_review_index_closed_media</string>
    <string name="pref_bangumi_timeline_guide_text_closed">pref_bangumi_timeline_guide_text_closed</string>
    <string name="pref_bangumi_timeline_preview_content">修仙模式预览</string>
    <string name="pref_bangumi_title">追番设置</string>
    <string name="pref_category_key_danmaku_style">DanmakuStyle</string>
    <string name="pref_category_title_danmaku_style">弹幕选项</string>
    <string name="pref_download_mediaSource_key">pref_download_mediaSource_key</string>
    <string name="pref_image_quality_key">pref_image_quality_key</string>
    <string name="pref_key_VoutViewType">VoutViewType</string>
    <string name="pref_key_about">About</string>
    <string name="pref_key_about_us">AboutUs</string>
    <string name="pref_key_account_and_security">AccountSecurity</string>
    <string name="pref_key_account_security_center">AccountSecurityCenter</string>
    <string name="pref_key_advanced_other">AdvancedOther</string>
    <string name="pref_key_auto_play">Auto_play</string>
    <string name="pref_key_auto_play_init">AutoPlayInit</string>
    <string name="pref_key_black_list">BlackList</string>
    <string name="pref_key_category_advanced">categoryAdvanced</string>
    <string name="pref_key_check_plugin_apk">CheckPluginApk</string>
    <string name="pref_key_check_update">CheckUpdate</string>
    <string name="pref_key_choose_3rd_player">Choose3rdPlayer</string>
    <string name="pref_key_choose_danmaku_engine">ChooseDanmakuEngine</string>
    <string name="pref_key_choose_play_mode">ChoosePlayer</string>
    <string name="pref_key_clearIM">clearIM</string>
    <string name="pref_key_clear_storage">pref_clear_storage</string>
    <string name="pref_key_clip_video_category">ClipVideoCategory</string>
    <string name="pref_key_cpu_info">CpuInfo</string>
    <string name="pref_key_danmaku_Monospaced">DanmakuMonospaced</string>
    <string name="pref_key_danmaku_block_bottom">DanmakuBlockBottom</string>
    <string name="pref_key_danmaku_block_settings">DanmakuBlockSetting</string>
    <string name="pref_key_danmaku_block_top">DanmakuBlockTop</string>
    <string name="pref_key_danmaku_force_gpu_render">DanmakuForceGpuRender</string>
    <string name="pref_key_danmaku_hide_by_default">DanmakuHideByDefault</string>
    <string name="pref_key_danmaku_mask">DanmakuMask</string>
    <string name="pref_key_danmaku_max_on_screen">DanmakuMaxOnScreen</string>
    <string name="pref_key_danmaku_orientation_vertical">DanmakuOrientationVertical</string>
    <string name="pref_key_danmaku_pink_dot">DanmakuPinkDot</string>
    <string name="pref_key_danmaku_style_bold">DanmakuStyleBold</string>
    <string name="pref_key_danmaku_text_style">DanmakuTextStyle</string>
    <string name="pref_key_diagnostics">Networkdiagnostics</string>
    <string name="pref_key_disable_push">DisablePush</string>
    <string name="pref_key_disable_splash">DisableSplash</string>
    <string name="pref_key_download_custom_folder">DownloadCustomFolder</string>
    <string name="pref_key_download_enable_auto_start">DownloadAutoStart</string>
    <string name="pref_key_download_enable_non_wifi">DownloadEnableNonWifi</string>
    <string name="pref_key_download_offline_diagnose">DownloadOfflineDiagnose</string>
    <string name="pref_key_download_offline_external_storage">SDExternalStorageTest</string>
    <string name="pref_key_download_storage">DownloadStorage</string>
    <string name="pref_key_feed_back">FeedBack</string>
    <string name="pref_key_float_window_category">FloatWindowCategory</string>
    <string name="pref_key_float_window_size">pref_key_float_window_size</string>
    <string name="pref_key_force_landscape">ForceLandscape</string>
    <string name="pref_key_group_notify">MessagesSetting</string>
    <string name="pref_key_help_preferences">Help</string>
    <string name="pref_key_hide_navigation">HideNavigation</string>
    <string name="pref_key_joinus">JoinUs</string>
    <string name="pref_key_landscape_playing">Landscape_playing</string>
    <string name="pref_key_license">License</string>
    <string name="pref_key_list_follow_up_push">FollowdUserNotify</string>
    <string name="pref_key_live_broadcast_reminding">LiveBroadcaseReminding</string>
    <string name="pref_key_live_float_video_auto_play">live_float_window_is_open</string>
    <string name="pref_key_live_short_video_auto_play_next">pref_live_short_video_auto_play_next</string>
    <string name="pref_key_live_short_video_wifi_auto_play">pref_live_short_video_wifi_auto_play</string>
    <string name="pref_key_logout">LogOut</string>
    <string name="pref_key_logout_category">LogOutCategory</string>
    <string name="pref_key_message_setting">MessagesSetting</string>
    <string name="pref_key_messages_notify_style">MessagesNotifyStyle</string>
    <string name="pref_key_person_info">PersonInfo</string>
    <string name="pref_key_play_category">PlayCategory</string>
    <string name="pref_key_play_setting">PlaySetting</string>
    <string name="pref_key_player_gif_screenshot">GifScreenShot</string>
    <string name="pref_key_player_kvo_enabled">pref_player_kvo_enabled</string>
    <string name="pref_key_player_lock">PlayerLock</string>
    <string name="pref_key_player_resize">PlayerResize</string>
    <string name="pref_key_player_rotate">PlayerRotate</string>
    <string name="pref_key_player_screenshot">ScreenShot</string>
    <string name="pref_key_player_screenshot_gif">ScreenGifShot</string>
    <string name="pref_key_player_sidebar_recommend">PlayerSidebarRecommend</string>
    <string name="pref_key_pr_teenager">PrTeenager</string>
    <string name="pref_key_preferences">Preferences</string>
    <string name="pref_key_real_name">RealName</string>
    <string name="pref_key_receive_strangers_messages">ReceiveStrangersMessages</string>
    <string name="pref_key_resolve_bili_cdn_play">ResolveBiliCdnPlay</string>
    <string name="pref_key_screen_bangumi">bangumiPreferences</string>
    <string name="pref_key_screen_codecPref">codecPreferences</string>
    <string name="pref_key_screen_danmakuPref">danmakuPreferences</string>
    <string name="pref_key_screen_downloadPref">downloadPreferences</string>
    <string name="pref_key_screen_orientation_sensor">ScreenOrientationSensor</string>
    <string name="pref_key_screen_pushPref">PushSetting</string>
    <string name="pref_key_screen_sleepModePref">sleepModeTime</string>
    <string name="pref_key_security_privacy">SecurityPrivacy</string>
    <string name="pref_key_security_privacy_category">SecurityPrivacyCategory</string>
    <string name="pref_key_shield_prop_danmu">LiveShieldPropDanmu</string>
    <string name="pref_key_shield_prop_effect">LiveShieldPropEffect</string>
    <string name="pref_key_shopping_address">ShoppingAddress</string>
    <string name="pref_key_shopping_info">ShoppingInfo</string>
    <string name="pref_key_shopping_info_category">ShoppingInfoCategory</string>
    <string name="pref_key_shopping_user_info">ShoppingUserInfo</string>
    <string name="pref_key_single_row_media_wifi_auto_play">pref_key_single_row_media_wifi_auto_play</string>
    <string name="pref_key_space_privacy_setting">SpacePrivacySetting</string>
    <string name="pref_key_tools_setting">pref_key_tools_setting</string>
    <string name="pref_key_wifi_auto_update">EnableWifiAutoUpdate</string>
    <string name="pref_logcat_key">pref_logcat_key</string>
    <string name="pref_news_notify_key">NewsNotifyStyle</string>
    <string name="pref_not_3rd_player_found">没有找到可以在线播放的第三方播放器</string>
    <string name="pref_player_aoutOpenSLES_key">pref_player_aoutOpenSLES_key</string>
    <string name="pref_player_codecMode_key">pref_player_codecMode_key</string>
    <string name="pref_player_completionAction_key">pref_player_completion_action_key3</string>
    <string name="pref_player_ffmpegSkipLoopFilter_key">pref_player_ffmpegSkipLoopFilter_key</string>
    <string name="pref_player_https_safe_key">pref_player_https_safe_key</string>
    <string name="pref_player_mediaSource_4g_key">pref_player_mediaSource_quality_4g_key</string>
    <string name="pref_player_mediaSource_key">pref_player_mediaSource_key</string>
    <string name="pref_player_mediaSource_wifi_key">pref_player_mediaSource_quality_wifi_key</string>
    <string name="pref_player_voutSurfaceFormat_key">pref_player_voutSurfaceFormat_key</string>
    <string name="pref_review_long_origin_closed">pref_review_long_origin_closed</string>
    <string name="pref_screen_key_advanced">Advanced</string>
    <string name="pref_screen_key_download_storage">pref_screen_key_download_storage</string>
    <string name="pref_screen_summary_advanced">建议在开发者指导下修改</string>
    <string name="pref_screen_title_advanced">调试设置</string>
    <string name="pref_screen_video_preference">播放设置</string>
    <string name="pref_summary_advanced_other">其他设置</string>
    <string name="pref_summary_aoutOpenSLES">只要播放器还有声音，就不要开这个设置</string>
    <string name="pref_summary_app_version_fmt">当前版本：%s</string>
    <string name="pref_summary_auto_play">进入视频详情页后自动播放视频</string>
    <string name="pref_summary_check_plugin_apk_installed_fmt2">解码包: %1$s-%2$s 已安装</string>
    <string name="pref_summary_check_plugin_apk_need_install_fmt2">需要安装解码包: %1$s %2$s</string>
    <string name="pref_summary_check_plugin_apk_need_upgrade_fmt4">解码包: %1$s-%2$s \10最新版: %3$s-%4$s 可更新</string>
    <string name="pref_summary_check_plugin_apk_no_need">不需要安装解码包</string>
    <string name="pref_summary_check_plugin_apk_out_of_date_fmt4">解码包: %1$s-%2$s 已过期\10最新版: %3$s-%4$s 可更新</string>
    <string name="pref_summary_clear_storage">清理存储空间</string>
    <string name="pref_summary_current_3rd_player">已经指定：</string>
    <string name="pref_summary_current_3rd_player_none">还没有指定第三方播放器</string>
    <string name="pref_summary_danmaku_Monospaced">针对英文字体优化效果</string>
    <string name="pref_summary_danmaku_engine_auto">自动选择（推荐）</string>
    <string name="pref_summary_danmaku_engine_dfm">烈焰弹幕使 [Danmaku Flame Master]</string>
    <string name="pref_summary_danmaku_engine_dfm_plus">超·烈焰弹幕使 [Danmaku Flame Master]</string>
    <string name="pref_summary_danmaku_engine_dfm_sr">+ StupidRenderer</string>
    <string name="pref_summary_danmaku_engine_v1">传统弹幕引擎</string>
    <string name="pref_summary_danmaku_force_gpu_render">部分设备会导致视频延迟</string>
    <string name="pref_summary_danmaku_hide_by_default">你确定？</string>
    <string name="pref_summary_danmaku_style_bold">部分字体无效或导致弹幕卡顿</string>
    <string name="pref_summary_preferences">设置</string>
    <string name="pref_title_about_us">关于我们</string>
    <string name="pref_title_account_and_security">账号安全</string>
    <string name="pref_title_advanced_other">其他设置</string>
    <string name="pref_title_category_advanced">高级</string>
    <string name="pref_title_clear_storage">清理存储空间</string>
    <string name="pref_title_feed_back">我的客服</string>
    <string name="pref_title_help_preferences">帮助</string>
    <string name="pref_title_logout_category">退出登录</string>
    <string name="pref_title_play_setting">播放设置</string>
    <string name="pref_title_preferences">设置</string>
    <string name="pref_title_push">推送与消息</string>
    <string name="pref_title_screen_codecPref">解码设置</string>
    <string name="pref_title_screen_danmakuPref">弹幕设置</string>
    <string name="pref_title_screen_downloadPref">离线设置</string>
    <string name="pref_title_security_privacy">安全隐私</string>
    <string name="pref_title_shopping_info">收货信息</string>
    <string name="pref_title_tools_setting">工具设置</string>
</resources>